got part1 working

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
-            "program": "part1d.py",
+            "program": "part4a.py",
             "cwd": "${workspaceFolder}/Assignments/A2",
             "console": "integratedTerminal"
         }
